--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+	<div class="home">
+		<h1>Qualities and behaviour</h1>
+<p>Ambitious, industrious and self driven person. Gender eqality and overall fairness advocate. </p>
+</div>
 </body>
 </html>
