--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <header>
 	<nav>
 		<ul>
-			<li><a href="home.html"> HOME</a></li>
-			<li><a href="gender.html"> GENDER</a></li>
-			<li><a href="girls empowerment.html">GIRLS EMPOWERMENT</a></li>
-			<li><a href="culture.html">CULTURE</a></li>
-			s
+			<li><a href="home.html"> Home</a></li>
+			<li><a href="visualize.html">Visualize</a></li>
+			<li><a href="currentnavigation.html">Current Navigation</a></li>
+			<li><a href="culture.html">Culture</a></li>
+			
 		</ul>
 	</nav>
 
 </header>
+<h1>Welcome to Rebeccah's Blog</h1>
 
 </body>
 </html
