--- a/culture.html
+++ b/culture.html
@@ -2,9 +2,23 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" href="styles.css">s
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<img src="images/culture.png" width="320" height="280">
+	<div class="culture">
+	<h2>Colonial and western Culture</h2>
+	<p>Examples of progressive inherited culture include</p>
+<ol>Inheritance of property by the boy child</ol>
+<P>Some of the ways we can fix this issue is by:</P>
+<ul>1.Educate our communities on the immportance and rights of every gender<ul>
+<p>Every community should take an ititiative of educating people on the importance and rights of every gender. Each child of the family should have an equal share of the property their parents own.</p>
+<ul>2.Rise our voices as girls and claim for our rights</ul>
+<p>Women and girls should raise their voices and talk about their rights as human beings and as part of the family.</p>
+<ul>3.Partner with policy makers and add it to the law that states property should be shared equaly.</ul>
+
+<ol>Suppression of wemen by men</ol>
+
+
+</div>
 </body>
 </html>
