--- a/home.html
+++ b/home.html
@@ -6,8 +6,21 @@
 </head>
 <body>
 	<div class="home">
-		<h1>Qualities and behaviour</h1>
+		<h1>Qualities and interest</h1>
 <p>Ambitious, industrious and self driven person. Gender eqality and overall fairness advocate. </p>
 </div>
+<div class="fruits">
+	<img src="images/fruits.jpg" width="300" height="300"><br>
+	<p>I prioritize my health on a daily basis</p>
+</div>
+<div class="laptop">
+	<img src="images/laptop.jpg" width="300" height="300"><br>
+	<p>My education and carrer comes next.</p>
+</div>
+<div class="palm">
+	<img src="images/palm.jpg" width="300" height="300"><br>
+	<p>Relaxation of mind rejuvenates my energy</p>
+</div>
+
 </body>
 </html>
