redone,added confidence

--- a/culture.html
+++ b/culture.html
@@ -5,6 +5,19 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	
+<header>
+	<nav>
+		<ul>
+			<li><a href="home.html"> Home</a></li>
+			<li><a href="visualize.html">Visualize</a></li>
+			<li><a href="currentnavigation.html">Current Navigation</a></li>
+			<li><a href="culture.html">Culture</a></li>
+			
+		</ul>
+	</nav>
+
+</header>
 	<div class="culture">
 	<h2>Colonial and western Culture</h2>
 	<p>Examples of progressive inherited culture include</p>
