--- a/currentnavigation.html
+++ b/currentnavigation.html
@@ -5,6 +5,19 @@
 	<link rel="stylesheet" href="styles.css">s
 </head>
 <body>
+	
+<header>
+	<nav>
+		<ul>
+			<li><a href="home.html"> Home</a></li>
+			<li><a href="visualize.html">Visualize</a></li>
+			<li><a href="currentnavigation.html">Current Navigation</a></li>
+			<li><a href="culture.html">Culture</a></li>
+			
+		</ul>
+	</nav>
+
+</header>
 	<h2>Get Busy</h2>
 <div class="home">
 	<p>The Corona Virus pandemic has caused so much frustrations and tension in the world today. Due to this many people including students are at home. Most of them are idle and spend most of their time on  social media.To prevent the idleness these young people can engage themselves in some  activites to keep them busy and make the best out of themselves by the end of this pandemic. The following are some of the activites they can engage their selves in.</p>
