--- a/home.html
+++ b/home.html
@@ -4,11 +4,27 @@
 	<title></title>
 	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+	<header>
+	<nav>
+		<ul>
+			<li><a href="home.html"> Home</a></li>
+			<li><a href="visualize.html">Visualize</a></li>
+			<li><a href="currentnavigation.html">Current Navigation</a></li>
+			<li><a href="culture.html">Culture</a></li>
+			
+		</ul>
+	</nav>
+
+</header>
+
 	<div class="home">
 		<h1>Qualities and interest</h1>
 <p>Ambitious, industrious and self driven person. Gender eqality and overall fairness advocate. </p>
 </div>
+
+<br clear="all">
 <div class="fruits">
 	<img src="images/fruits.jpg" width="300" height="300"><br>
 	<p>I prioritize my health on a daily basis</p>
@@ -18,9 +34,20 @@
 	<p>My education and carrer comes next.</p>
 </div>
 <div class="palm">
-	<img src="images/palm.jpg" width="300" height="300"><br>
+	<img src="images/ocean.webp" width="300" height="300"><br>
 	<p>Relaxation of mind rejuvenates my energy</p>
 </div>
+
+<div class="fruits">
+	<img src="images/fruits.jpg" width="300" height="300"><br>
+	<p>I prioritize my health on a daily basis</p>
+</div>
+
+<div class="content">
+	<h2>My journey to confidence</h2>
+	
+</div>
+
 
 </body>
 </html>
