--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<title></title>
 </head>
-<body>
+<body class="intro">
 <header>
 	<nav>
 		<ul>
@@ -17,8 +17,10 @@
 	</nav>
 
 </header>
+<div class="intron">
+	
 <h1>Welcome to Rebeccah's Blog</h1>
-
+</div>
 </body>
 </html
 
