--- a/visualize.html
+++ b/visualize.html
@@ -4,22 +4,47 @@
 	<title></title>
 	<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="visintro">
+
+<header>
+	<nav>
+		<ul>
+			<li><a href="home.html"> Home</a></li>
+			<li><a href="visualize.html">Visualize</a></li>
+			<li><a href="currentnavigation.html">Current Navigation</a></li>
+			<li><a href="culture.html">Culture</a></li>
+			
+		</ul>
+	</nav>
+
+</header>
+
 <div class="visuals">
 	<h3>Defination</h3>
 <h5>Visualization is any technique for creating images, diagrams, or animations to communicate a message.Visualization though visuals and imagery has been an effective way to communicate ideas</h5>	
 <h4>Ways through which we can visualize</h4>
 <li>
 	Dealing with emotions
-	<p>Emotions are biological states associated with the nervous system brought on by neurophysiological changes variously associated with thoughts and feelings.Emotions are very important to visualize inorder to achieve the best performance and they have to be delt with approprietely.In order to achieve the high performance, one needs to remain positive. The following are ways in which one can cast positivity. <ul>Challenge yourself by dealing with the obstacles in your life and avoid giving space to negative thoughts. It is evident in Trevor Noahs book how Trevor used to cope up with the hard and dofficult situations nin his school. The mocary he underwent from his fellow students did not bring him dowm, instead he kept pushing through and remained positive.</ul>
-		<ul>Feel positive emotions like enthusiasm,happiness, pride and satisfaction. From Kirk Frankline, what kept him going in that concentration camp where people lost hope and got all sorts of frustrstions is the fact that one day he will be out of that place and be able to narrate the story to the world. /</ul>
-	 </p>
+	<br clear="all">
+	<div class="emotions">
+	<img src="images/emotions.jpg" width="300" height="300" align="left"><br>
+
+	<div class="info1">
+	<p>Emotions are biological states associated with the nervous system brought on by neurophysiological changes variously associated with thoughts and feelings.<br>Emotions are very important to visualize inorder to achieve the best performance and they have to be delt with approprietely.In order to achieve the high performance, one needs to remain positive<br>. The following are ways in which one can cast positivity. <ul>Challenge yourself by dealing with the obstacles in your life and avoid giving space to negative thoughts. It is evident in Trevor Noahs book how Trevor used to cope up with the hard and dofficult situations nin his school.<br> The mocary he underwent from his fellow students did not bring him dowm, instead he kept pushing through and remained positive.<br>
+	<ul>Feel positive emotions like enthusiasm,happiness, pride and satisfaction. From Kirk Frankline, what kept him going in that concentration camp where people lost hope and got all sorts of frustrstions is the fact that one day he will be out of that place and be able to narrate the story to the world.
+	 </ul>
+	 </div>
+
 </li>
+</div>
+
+	
 <li>
 	Remove doubt
+	<div class="doubt">
+	<img src="images/doubt.jpg" width="300" height="300" align="left"><br>
 	<p>Doubt is the feeling of uncertainy or lack of conviction.Doubt can be as a result of lack of confidence, experience in a certain field or self limitting beliefs. To archieve the best performance with visualizatin, the more one gets used to certain events and circumstances that ressurects your doubt, the more one gets comfortable in solving that particular problem. From Trevor Noah, the more he got humiliated the more he learnt how to cope up with the siytuation. He dicided to engage himself in the helping people get breakfast from the carnteen faster. This helped him engage with many people and atleast fit-in in their coversations. It also made him porpular in school.</p>
 </li>
-
 </div>
 </body>
 </html> 
