--- a/gender.html
+++ b/gender.html
@@ -5,6 +5,19 @@
 	<link rel="stylesheet" href="styles.css">s
 </head>
 <body>
+	
+<header>
+	<nav>
+		<ul>
+			<li><a href="home.html"> Home</a></li>
+			<li><a href="visualize.html">Visualize</a></li>
+			<li><a href="currentnavigation.html">Current Navigation</a></li>
+			<li><a href="culture.html">Culture</a></li>
+			
+		</ul>
+	</nav>
+
+</header>
 <div class="home">
 	<img src="images/eqality.jpg" width="320" height="280">
 </div>
