--- a/girlsempowerment.html
+++ b/girlsempowerment.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 
+<header>
+	<nav>
+		<ul>
+			<li><a href="home.html"> Home</a></li>
+			<li><a href="visualize.html">Visualize</a></li>
+			<li><a href="currentnavigation.html">Current Navigation</a></li>
+			<li><a href="culture.html">Culture</a></li>
+			
+		</ul>
+	</nav>
+
+</header>
 </body>
 </html>
