--- a/home.html
+++ b/home.html
@@ -39,14 +39,30 @@
 </div>
 
 <div class="fruits">
-	<img src="images/fruits.jpg" width="300" height="300"><br>
+	<img src="images/fruits.jpg" width="330" height="300"><br>
 	<p>I prioritize my health on a daily basis</p>
 </div>
 
 <div class="content">
 	<h2>My journey to confidence</h2>
-	
 </div>
+
+<div class="confidence">
+	<img src="images/confidence.jpg" width="100%" height="300"><br>
+	<p> Confidence is a state of being clear headed either that a hypothesis or prediction is correct or that a chosen course of action is the best or most effective. Confidence comes from a latin word fidere' which means "to trust"; therefore, having a self-confidence is having trust in one's self.</p>
+</div>
+<div class="part1">
+	<h2>Ways to improve your confidence</h2>
+	<h3>Planning and preparation</h3>
+	<p>If you are applying for a new job, for example, it would be a good idea to prepare for the interview. Plan what you would want to say and think about some of the questions that you may be asked.  Practise your answers with friends or colleagues and gain their feedbackThere are many other examples of planning for an interview. Perhaps you should visit the hairdresser before you go. How are you going to travel to the interview and how long will the journey take? What should you wear? Take control of unknown situations the best you can, break down tasks into smaller sub-tasks and plan as many as you can.In some situations it may be necessary to also have contingency plans - backup plans if your main plan fails. If you had planned to travel to your interview by car but on the morning the car wouldn't start how would you get there? Being able to react calmly to the unexpected is a sign of confidence.
+</p>
+</div>
+<div class="part2">
+	<h3>Positive thought</h3>
+	<p>If you believe that you can achieve something then you are likely to work hard to make sure you do if, however, you don't believe that you can accomplish a task then you are more likely to approach it half-heartedly and therefore be more likely to fail. The trick is convincing yourself that you can do something - with the right help, support, preparedness and knowledge. The basic rules of positive thinking are to highlight your strengths and successes and learn from your weaknesses and mistakes. This is a lot easier than it sounds, and we often dwell on things that we are not happy with from our past - making them into bigger issues than they need to be. These negative thoughts can be very damaging to confidence and your ability to achieve goals.
+</p>
+</div>
+
 
 
 </body>
